# In-Context-multiview-img-generation

./: .gitignore  Makefile  PLANS.md  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: quality.yml
configs/: study1_pilot copy.yaml  study1_pilot.yaml
evaluation/: __init__.py  compare_checkpoints.py  create_blinded_scorecard.py  generate_pairs.py  prompts.jsonl
evaluation/results_8bit/snack_container/: manifest.json
output/study1_pilot/: config.yaml
output/study1_pilot_v2/: config.yaml
src/: batch_dataset_builder.py  captioner.py  colmap_poses.py  composite_img.py  dataset_builder.py  rename_files.py  sanity_check.py  study1_split.py
tests/: test_batch_dataset_builder.py  test_captioner.py  test_colmap_poses.py  test_compare_checkpoints.py  test_evaluation_pairing.py  test_preprocessing.py  test_sanity_check.py  test_study1_split.py
