[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "multiview-generation"
version = "0.1.0"
description = "Preprocessing utilities for multi-view image generation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.55,<2",
    "numpy>=1.26",
    "pillow>=10.3",
    "pydantic>=2.7,<2.12",
    "python-dotenv>=1.0",
    "tqdm>=4.66.2",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
